--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -6,6 +6,7 @@
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	padding: 0px 15px;
 }
 
 h1 {
@@ -16,11 +17,7 @@ h1 {
 
 section {
 	float: left;
-	padding: 0px 0px 30px 30px;
-}
-
-section:nth-child(4) {
-	padding-right: 30px;
+	padding: 0px 15px 30px 15px;
 }
 
 .box {
@@ -36,7 +33,7 @@ section:nth-child(4) {
 	font-weight: bold;
 	width: 35%;
 	height: 30px;
-	padding: 2px;
+	padding: 3px;
 	text-align: center;
 	position: absolute;
 	top: 0;
@@ -72,7 +69,7 @@ section:nth-child(4) .section-title{
 		width: 100%;
 	}
 	section:nth-child(3) {
-	padding-right: 30px;
+	padding-right: 15px;
 	}
 }
 
@@ -80,8 +77,5 @@ section:nth-child(4) .section-title{
 @media (max-width: 767px) {
 	.col-sm-12{
 		width: 100%;
-	}
-	section{
-		padding: 0px 30px 30px 30px;
-	}
+	}	
 }
